[package]
name = "allay"
version = "0.1.0-alpha.1"
authors = ["Jonas da Silva"]
edition = "2021"
description = "Your Personal Creator Assistant"
documentation = "https://allay-mc.github.io/docs"
homepage = "https://allay-mc.github.io"
repository = "https://github.com/allay-mc/allay"
license = "GNU GPLv3"
keywords = ["add-on", "assistance", "bedrock", "creator", "minecraft"]
categories = ["command-line-utilities", "config"]

[dependencies]
clap = { version = "4.3.16", features = ["cargo"] }
env_logger = "0.10.0"
fs_extra = "1.3.0"
log = "0.4.19"
minreq = { version = "2.8.1", features = ["https-rustls"] }
prettytable = "0.10.0"
schemars = { version = "0.8.12", optional = true }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
toml = "0.7.6"
uuid = { version = "1.4.1", features = ["v4"] }

[features]
config-schema = ["schemars"]
