[package]
name = "allay"
version = "0.1.0"
edition = "2021"
description = "Your Personal Creator Assistant"
documentation = "https://allay-mc.github.io/allay"
homepage = "https://allay-mc.github.io"
repository = "https://github.com/allay-mc/allay"
license = "GPL-3.0-only"
keywords = ["add-on", "assistance", "bedrock", "creator", "minecraft"]
categories = ["command-line-utilities", "config"]


[dependencies]
clap = { version = "4.4.12", features = ["cargo"] }
schemars = { version = "0.8.16", optional = true }
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
libuuid = { package = "uuid", version = "1.4.1", features = ["v4", "serde"] }
thiserror = "1.0.52"
log = "0.4.20"
fs_extra = "1.3.0"
simplelog = "0.12.1"
textwrap-macros = "0.3.0"
dirs = "5.0.1"
time = "0.3.31"
zip-extensions = "0.6.2"
warp = { version = "0.3.6", optional = true }
tokio = { version = "1.35.1", features = ["rt", "macros"], optional = true }
serde_json = "1.0.111"
qrcode = { version = "0.13.0", default_features = false, optional = true }
local-ip-address = { version = "0.5.7", optional = true }
prettytable = "0.10.0"
notify = { version = "6.1.1", optional = true }
notify-debouncer-mini = { version = "0.4.1", optional = true }
mdbook = { version = "0.4.37", optional = true }
open = { version = "5.1.2", optional = true }
rhai = { version = "1.17.1", features = [
    "no_index",
    "no_time",
    "no_function",
    "no_closure",
    "no_module",
    "no_custom_syntax"
] }
git2 = { version = "0.18.3", optional = true }
clap_complete = { version = "4.5.2", optional = true }

[features]
# See README.md for descriptions about the features.
default = ["export", "manual", "share", "shell-completions", "watch"]
config-schema = ["schemars"]
export = ["open"]
git = ["git2"]
manual = ["open"]
share = ["tokio", "warp", "qrcode", "local-ip-address"]
watch = ["notify", "notify-debouncer-mini"]
shell-completions = ["clap_complete"]


# [lib]
# name = "allay"

[[bin]]
doc = false
name = "allay"

[profile.release]
opt-level = "s"
strip = "symbols"
debug = "line-tables-only"
